--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hngi9",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "./dist/server.js",
   "scripts": {
-    "start": "node ./dist/app.js",
-    "dev": "nodemon ./src/app.ts",
+    "start": "node ./dist/server.js",
+    "dev": "nodemon ./src/server.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
