--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
+    "compile": "tsc -p .",
+    "start:dev": "npm run compile && nodemon ./dist/server.js",
     "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
-    "build": "tsc -p ."
+    "dev": "ts-node-dev --respawn ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "envalid": "^7.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
-    "nodemon": "^2.0.20",
+    "@types/uuid": "^9.0.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
