added compile to start script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "tsc -p .",
     "start:dev": "npm run compile && nodemon ./dist/server.js",
-    "start": "node ./dist/server.js",
+    "start": "npm run compile && node ./dist/server.js",
     "dev": "ts-node-dev --respawn ./src/server.ts"
   },
   "keywords": [],
