--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "tsc -p .",
     "start:dev": "npm run compile && nodemon ./dist/server.js",
     "start": "node ./dist/server.js",
-    "dev": "ts-node-dev --respawn ./src/server.ts"
+    "dev": "set NODE_ENV=development&& ts-node-dev --respawn ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,9 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.5.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   },
