--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
@@ -20,13 +21,17 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "http-status": "^1.7.0",
+    "joi": "^17.10.2",
     "mongoose": "^7.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.8",
     "@types/node": "^18.11.7",
     "@types/uuid": "^9.0.3",
     "ts-node": "^10.9.1",
