--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "openai": "^4.11.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
