--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@deepgram/sdk": "^2.4.0",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
