--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^2.4.0",
+    "amqplib": "^0.10.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -31,6 +32,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.8",
