--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "openai": "^4.11.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -37,6 +39,8 @@
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.8",
     "@types/node": "^18.11.7",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.4",
     "@types/uuid": "^9.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
